# dropforge

./: .gitignore  LICENSE  MANIFEST.in  pyproject.toml
.github/workflows/: croptop.yaml  flatiron.yaml  testbargs.yaml  testecr.yaml  testgar.yaml
dropforge/: __main__.py  build.py
forgedrop/: __main__.py  build.py  docker.py  objs.py
forgedrop/pckgdata/: Dockerfile  forge.yaml
src/dropforge/: __main__.py  build.py  docker.py  ecr.py  objs.py  regs.py  tagpath.py  tagpaths.py
src/dropforge/basedonfiles/: Dockerfile_Based  forge.yaml
src/dropforge/basefiles/: Dockerfile  forge.yaml
tests/base/: forge.yaml
tests/systems/bargs/: Dockerfile  forge.yaml
tests/systems/base_img_ecr/: Dockerfile  forge.yaml
tests/systems/buildargs/: Dockerfile  forge.yaml
tests/systems/ecr/: Dockerfile  forge.yaml
tests/systems/ecr_baseimg/workspace/: some.py
tests/systems/ecr_child_img/: forge.yaml
tests/systems/ecr_childimg/: forge.yaml
tests/systems/gar/: Dockerfile  forge.yaml
tests/systems/manybargs/one/: Dockerfile  forge.yaml  requirements.txt
tests/systems/manybargs/two/: Dockerfile  forge.yaml
tests/systems/manyecr/one/: forge.yaml
tests/systems/manyecr/two/: forge.yaml
tests/systems/manygar/one/: Dockerfile  forge.yaml
tests/systems/manygar/two/: forge.yaml
